# iced-plotter

./: Cargo.toml  LICENSE  README.md  TODO.md
examples/: coloring.rs  interactive.rs  sensor-data.rs  static-graph.rs  updating-graph.rs
src/: canvas.rs  chart.rs  colormap.rs  gpu_types.rs  lib.rs  pipeline.rs  plotter.rs  renderer.rs  shader.rs  ticks.rs
src/shaders/: plot.wgsl
