[package]
name = "iced-graph"
version = "0.1.0"
edition = "2024"

[env]
# when using the default wgpu backend, artifacts from the canvas are left behind
# when resizing quickly. 
# TODO: File github issue about this.
ICED_BACKEND = "tiny_skia"

[dependencies]
bon = "3.8.2"
iced = { version = "0.14.0", features = ["canvas"]}

